src/frontend/variables.css
@font-face {
  font-family: 'Urbanist-VariableFont_wght';
  src: url('../frontend/assets/fonts/Urbanist-VariableFont_wght.ttf') format('truetype');
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

:root {
  --ff-400: 'Urbanist', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
  
  --fsz-12: clamp(1.2rem, calc(1.1rem + 0.3vw), 1.8rem);
  --fsz-14: clamp(1.4rem, calc(1.3rem + 0.3vw), 2.0rem);
  --fsz-16: clamp(1.6rem, calc(1.5rem + 0.3vw), 2.2rem);
  --fsz-18: clamp(1.8rem, calc(1.7rem + 0.3vw), 2.4rem);
  --fsz-20: clamp(2.0rem, calc(1.9rem + 0.3vw), 2.6rem);
  --fsz-30: clamp(3.0rem, calc(2.9rem + 0.3vw), 3.6rem);

  --font-clr: hsl(0, 0%, 100%);
  --font-clr-05: hsla(0, 0%, 100%, 0.5);

  --error-clr: hsl(0, 80%, 70%, 1);
  --success-clr: hsl(150, 80%, 70%, 1);

  --bg-clr: hsla(0, 0%, 18%, 1);
  --card-clr: hsla(0, 0%, 12%, 1);
  --bg-clr-03: hsla(0, 0%, 18%, 0.3);
  --card-clr-03: hsla(0, 0%, 12%, 0.3);
  --thistle: hsla(290, 35%, 83%, 1);
  --lemon-chiffon: hsla(58, 74%, 85%, 1);

  --thistle-07: hsla(290, 35%, 83%, 0.7);
  --lemon-chiffon-07: hsla(58, 74%, 85%, 0.7);
  --thistle-03: hsla(290, 35%, 83%, 0.3);
  --lemon-chiffon-03: hsla(58, 74%, 85%, 0.3);
  --thistle-01: hsla(290, 35%, 83%, 0.1);
  --lemon-chiffon-0025: hsla(58, 74%, 85%, 0.025);

  --p-inline: clamp(10px, 2vw, 20px);
  --p-block: clamp(5px, 1vh, 10px);

  --gap: clamp(5px, 1vw, 10px);

  --shadow: 0 0 5px var(--card-clr);
  --shadow-inset: inset 0 0 3px var(--thistle), inset 0 0 8px var(--thistle-03);
  --shadow-inset-hl: inset 0 0 3px var(--lemon-chiffon), inset 0 0 8px var(--lemon-chiffon-03);
  --shadow-inset-success: inset 0 0 3px var(--success-clr), inset 0 0 8px var(--success-clr);
  --shadow-inset-error: inset 0 0 3px var(--error-clr), inset 0 0 8px var(--error-clr);

  --shadow-hover: 0 0 8px var(--card-clr);
  --shadow-inset-hover: inset 0 0 6px var(--thistle), inset 0 0 14px var(--thistle-03);
  --shadow-inset-hl-hover: inset 0 0 6px var(--lemon-chiffon), inset 0 0 14px var(--lemon-chiffon-03);

  --btn-width: clamp(fit-content, calc(fit-content + 2vw), 300px);
  --btn-height: clamp(fit-content, calc(fit-content + 2vh), 150px);

  --margin-small: 1rem;
  --margin-mid: 2rem;
  --margin-big: 3rem;
}

h1 {
  font-size: var(--fsz-20);
}

h2 {
  font-size: var(--fsz-18);
  color: var(--font-clr-05);
}

h3 {
  font-size: var(--fsz-16);
}

a {
  text-decoration: none;
  color: var(--thistle-07);
}

body {
  font-size: var(--fsz-14);
  background: var(--bg-clr);
}

button {
  border-radius: 1rem;
  background: var(--card-clr);
  color: var(--font-clr);
  box-shadow: var(--shadow), var(--shadow-inset);
  padding: var(--p-block) var(--p-inline);
}

dialog {
  background: var(--card-clr);
  color: var(--font-clr);
  border-radius: 1rem;
  padding: var(--p-block) var(--p-inline);
  border: 2px solid var(--lemon-chiffon-07);
  top: 50%;
  z-index: 10;
}

dialog.success {
  box-shadow: var(--shadow), var(--shadow-inset-success);
}

dialog.fail {
  box-shadow: var(--shadow), var(--shadow-inset-error);
}

dialog.info {
  box-shadow: var(--shadow), var(--shadow-inset);
}

